# decimal-arithmetic

./: .gitignore  LICENSE  README.md  TODO  decimal-arithmetic.cabal
src/Numeric/: Decimal.hs
src/Numeric/Decimal/: Arithmetic.hs  Arithmetic.hs-boot  Conversion.hs  Conversion.hs-boot  Conversions.hs  Conversions.hs-boot  Encoding.hs  Exception.hs  Exception.hs-boot  Number.hs  Number.hs-boot  Operation.hs  Operation.hs-boot  Operations.hs  Operations.hs-boot  Precision.hs  Rounding.hs  Rounding.hs-boot
test/: Arbitrary.hs  Harness.hs  Spec.hs  doctests.hs
test/Numeric/Decimal/: EncodingSpec.hs  NumberSpec.hs  OperationSpec.hs
