cabal-version:       2.2

name:                decimal-arithmetic
version:             0.5.1.1

synopsis:            An implementation of the General Decimal Arithmetic
                     Specification

description:         This package provides an implementation of the General
                     Decimal Arithmetic Specification by Mike Cowlishaw.
                     .
                     For details, see <http://speleotrove.com/decimal/>

homepage:            https://github.com/verement/decimal-arithmetic#readme
bug-reports:         https://github.com/verement/decimal-arithmetic/issues

license:             BSD-3-Clause
license-file:        LICENSE

copyright:           © 2016–2017 Robert Leslie
author:              Rob Leslie <rob@mars.org>
maintainer:          Rob Leslie <rob@mars.org>

stability:           experimental
category:            Numeric

build-type:          Simple

extra-source-files:  README.md
                     TODO
                     stack.yaml

flag with-integer-gmp
  description: Include integer-gmp package (removed after GHC 9)
  manual:      False

source-repository head
  type:                git
  location:            https://github.com/verement/decimal-arithmetic.git

library
  hs-source-dirs:      src

  exposed-modules:     Numeric.Decimal
                       Numeric.Decimal.Arithmetic
                       Numeric.Decimal.Conversion
                       Numeric.Decimal.Operation
                       Numeric.Decimal.Number
                       Numeric.Decimal.Exception
                       Numeric.Decimal.Precision
                       Numeric.Decimal.Rounding
  if flag(with-integer-gmp)
    build-depends:
        , base >=4.15.0.0
  else
    build-depends:
      , base >=4.11 && < 4.15.0.0
      , integer-gmp
  build-depends:      
                     , binary >= 0.8
                     , deepseq >= 1.4
                     , mtl >= 2.2
  default-language:    Haskell2010
  default-extensions:  Trustworthy
  other-extensions:    FlexibleInstances
                       MultiParamTypeClasses
                       RoleAnnotations

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Arbitrary
                       Numeric.Decimal.NumberSpec
                       Numeric.Decimal.OperationSpec
                       
  build-depends:       base
                     , binary
                     , decimal-arithmetic
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

-- test-suite doctests
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             doctests.hs
--   build-depends:       base
--                      , decimal-arithmetic
--                      , doctest >= 0.8
--                      , QuickCheck
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010
